[package]
authors = ["joseph <josephbgerber@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "blinker"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
alloc-cortex-m = "0.3.5"
cortex-m-rtfm = "0.5.1"

lis3dsh = { git = "https://github.com/JosephBGerber/lis3dsh-rs" }
accelerometer = "0.10.0"

cortex-m-semihosting = "0.3.5"

# panic-halt = "0.2.0"
panic-semihosting = "0.5.3"

[dependencies.stm32f4xx-hal]
version = "0.6.0"
features = ["stm32f407", "rt"]

[[bin]]
name = "blinker"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
