[package]
authors = ["joseph <josephbgerber@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "blinker"
version = "0.1.0"

[dependencies]
alloc-cortex-m = { git = "https://github.com/rust-embedded/alloc-cortex-m" }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
# panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32f4xx-hal = { version = "0.8.0", features = ["stm32f407", "rt"] }

[[bin]]
name = "blinker"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
