[package]
name = "tester"
version = "0.1.0"
authors = ["JosephBGerber <josephbgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
minifb = { version = "0.16.0", default-features = false, features = ["x11"] }
